# GlimpseMe

./: CLAUDE.md  README.md  README_EN.md
.agent/rules/: bash-usage.md  core-system.md  learning-mode.md  plan-mode-workflow.md  task-management.md  task-tool-usage.md
.agent/workflows/: create-agent.md  create-claudemd.md  explore.md  plan.md  pr-comments.md  review-pr.md  security-review.md  summarize.md
Mac/ClaudeWeb/: COMPARISON.md  GlimpseMac_PRD.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.sh
Mac/ClaudeWeb/Sources/: main.swift  (+3 more)
Wins/: UI_REQUIREMENTS.md
Wins/ClipboardMonitor/: CMakeLists.txt  DATA_QUALITY_REPORT.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_LOG.md  README.md  REQUIREMENTS.md  build.bat  build.ps1  clipboard_monitor.cpp  clipboard_monitor.h  config_design.md  debug_log.h  floating_window.cpp  floating_window.h  install.bat  main.cpp  storage.cpp  storage.h  uninstall.bat  utils.h
Wins/ClipboardMonitor/browser_extension/: README.md  background.js  content.js  install.bat  manifest.json
Wins/ClipboardMonitor/browser_extension/native_host/: build.bat  com.clipboardmonitor.context.json  native_host.cpp
Wins/ClipboardMonitor/context/: async_executor.cpp  async_executor.h  context_adapter.h  context_data.h  context_manager.cpp  context_manager.h
Wins/ClipboardMonitor/context/adapters/: browser_adapter.cpp  browser_adapter.h  notion_adapter.cpp  notion_adapter.h  vscode_adapter.cpp  vscode_adapter.h  wechat_adapter.cpp  wechat_adapter.h
Wins/ClipboardMonitor/context/utils/: html_parser.cpp  html_parser.h  ui_automation_helper.cpp  ui_automation_helper.h
Wins/FloatingTool/: Dashboard.cs  Program.cs
